--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     ],
     "require": {
         "composer/installers": "1.*",
-        "johnpbloch/wordpress": ">=4.9"
+        "johnpbloch/wordpress": ">=4.9",
+        "vlucas/phpdotenv": "^3.6"
     },
     "extra": {
         "wordpress-install-dir": "public/wp",
@@ -16,5 +17,9 @@
             "public/wp-content/plugins/{$name}/": ["type:wordpress-plugin"],
             "public/wp-content/themes/{$name}/": ["type:wordpress-theme"]
         }
+    },
+    "require-dev": {
+        "filp/whoops": "^2.5",
+        "kint-php/kint": "^3.2"
     }
 }
