Added variables for deployment

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,11 @@ AUTOMATIC_UPDATER_DISABLED = true # Disable plugin updating from UI
 DISALLOW_FILE_EDIT = true # Disable file edits from UI
 WP_AUTO_UPDATE_CORE = false # Disable Automatic Core Updates
 DISALLOW_FILE_MODS = true # Disable Plugin update from UI
+
+# Deploy Settings
+DEP_REPO = "" # Repository to deploy
+DEP_BRANCH = "master" # Usually master or production
+DEP_KEEP_RELEASES = 5
+DEP_SHARED_DIRS = "uploads" # Array like syntax. value1, value2, valueN...
+DEP_SHARED_FILES = "" # Array like syntax. value1, value2, valueN...
+DEP_WRITABLE_DIRS = "uploads" # Array like syntax. value1, value2, valueN...
