Completed deployer recipe and improved checks in wp-config

--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 # App
-APP_ENV = "local"
+APP_ENV = "production"
 WP_CONTENT_DIR = "/wp-content"
 WP_CONTENT_URL = "/wp-content"
-WP_HOME = "http(s)://domain.test" # Correct if in a subdirectory
+WP_HOME = "https://impressdev.ml" # Correct if in a subdirectory
 WP_SITE_URL = "${WP_HOME}/wp" # This one points to our core files
 
 # Debug and errors
@@ -15,9 +15,9 @@ APP_KINT = true # Debugging tools
 APP_WHOOPS = true # Laravel flavoured error reporting
 
 # Database stuff
-DB_NAME = ""
-DB_USER = ""
-DB_PASSWORD = ""
+DB_NAME = "impressdev"
+DB_USER = "impressdev"
+DB_PASSWORD = "vGuvDcExnJ2d9HOB7RrlbERw"
 DB_HOST = "localhost"
 DB_CHARSET = "utf8"
 TABLE_PREFIX = "wp_"
@@ -40,8 +40,8 @@ WP_AUTO_UPDATE_CORE = false # Disable Automatic Core Updates
 DISALLOW_FILE_MODS = true # Disable Plugin update from UI
 
 # Deploy Settings
-DEP_APP_NAME = "${WP_HOME}" # Change it to whatever you want
-DEP_REPO = "" # Repository to deploy
+DEP_APP_NAME = "${WP_HOME}"
+DEP_REPO = "git@github.com:zreedeecom/wordpress-skeleton.git" # Repository to deploy
 DEP_BRANCH = "master" # Usually master or production
 DEP_KEEP_RELEASES = 5
 DEP_SHARED_DIRS = "uploads" # Array like syntax. value1, value2, valueN...
