--- a/hosts.yml
+++ b/hosts.yml
@@ -9,7 +9,11 @@ skeleton.test:
     UserKnownHostsFile: /dev/null
     StrictHostKeyChecking: no
   stage: production
-  roles:
-    - app
-    - db
   deploy_path: ~/files
+  roles: app
+
+localhost:
+  local: true
+  roles: app
+  deploy_path: ./deployer-build
+  user: luis
