moved kint and whoops from dev to nodev

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,9 @@
         "johnpbloch/wordpress": "5.*",
         "vlucas/phpdotenv": "3.6",
         "wpackagist-theme/twentynineteen": "*",
-        "wpackagist-plugin/wordpress-importer": "*"
+        "wpackagist-plugin/wordpress-importer": "*",
+        "filp/whoops": "2.5.*",
+        "kint-php/kint": "3.2.*"
     },
     "extra": {
         "wordpress-install-dir": "public/wp",
@@ -50,8 +52,6 @@
         }
     },
     "require-dev": {
-        "filp/whoops": "2.5.*",
-        "kint-php/kint": "3.2.*",
         "deployer/deployer": "6.5.*"
     }
 }
